--- a/Analiza.ipynb
+++ b/Analiza.ipynb
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -666,8 +666,8 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Warmachine Prime Mk III</td>\n",
-       "      <td>Daniel</td>\n",
-       "      <td>Wróbel</td>\n",
+       "      <td>Urszula</td>\n",
+       "      <td>Kaczmarek</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -722,8 +722,8 @@
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>Soulfall</td>\n",
-       "      <td>Zygmunt</td>\n",
-       "      <td>Szymański</td>\n",
+       "      <td>Justyna</td>\n",
+       "      <td>Nowicka</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -778,8 +778,8 @@
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>Trumpet</td>\n",
-       "      <td>Hubert</td>\n",
-       "      <td>Wróbel</td>\n",
+       "      <td>Władysław</td>\n",
+       "      <td>Malinowski</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -820,8 +820,8 @@
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>MindTrap</td>\n",
-       "      <td>Robert</td>\n",
-       "      <td>Sikora</td>\n",
+       "      <td>Grażyna</td>\n",
+       "      <td>Rutkowska</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -900,7 +900,7 @@
        "4                                 Colonial Diplomacy      Joanna       Wójcik   \n",
        "5                             Pandemic: Fall of Rome        Adam        Zając   \n",
        "6                                      Haiku Warrior     Dariusz        Nowak   \n",
-       "7                            Warmachine Prime Mk III      Daniel       Wróbel   \n",
+       "7                            Warmachine Prime Mk III     Urszula    Kaczmarek   \n",
        "8    T.E.G.: Plan Táctico y Estratégico de la Guerra      Konrad    Zieliński   \n",
        "9                  The Battle of the Little Big Horn      Dorota    Pawłowska   \n",
        "10                                Pizza Box Baseball      Hubert     Krawczyk   \n",
@@ -908,7 +908,7 @@
        "12                                    Tattoo Stories      Joanna         Król   \n",
        "13                                       August Fury      Helena      Woźniak   \n",
        "14                                        Crossboule   Stanisław   Wiśniewski   \n",
-       "15                                          Soulfall     Zygmunt    Szymański   \n",
+       "15                                          Soulfall     Justyna      Nowicka   \n",
        "16                                    Docteur Pilule   Kazimiera    Grabowska   \n",
        "17                         City of the Big Shoulders         Jan  Kwiatkowski   \n",
        "18                                             Candy    Antonina    Kozłowska   \n",
@@ -916,13 +916,13 @@
        "20                                       Schlafmütze   Władysław        Mazur   \n",
        "21                       APBA American Saddle Racing      Emilia      Woźniak   \n",
        "22                            Amun-Re: The Card Game      Sandra    Kozłowska   \n",
-       "23                                           Trumpet      Hubert       Wróbel   \n",
+       "23                                           Trumpet   Władysław   Malinowski   \n",
        "24                 Freedom: The Underground Railroad       Marta     Jaworska   \n",
        "25                         The Battle of Five Armies       Julia        Dudek   \n",
        "26                                      Yokai Septet       Iwona  Lewandowska   \n",
        "27                                        SET Junior      Ignacy    Dąbrowski   \n",
        "28                                             Siege        Igor     Jaworski   \n",
-       "29                                          MindTrap      Robert       Sikora   \n",
+       "29                                          MindTrap     Grażyna    Rutkowska   \n",
        "30                                        Cephalopod   Stanisław    Kaczmarek   \n",
        "31                                         Dead Last     Zygmunt        Dudek   \n",
        "32                                              1942        Lena    Pawłowska   \n",
@@ -975,7 +975,7 @@
        "38            1  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,6 +983,236 @@
    "source": [
     "df=pd.DataFrame(best_players(cs),columns=[\"Game_title\",\"First_name\",\"Last_name\",\"Num_of_wins\"])\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Game Title</th>\n",
+       "      <th>Sum of rental amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dragon Ball Z TCG (2014 edition)</td>\n",
+       "      <td>633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Yokai Septet</td>\n",
+       "      <td>543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Scrabble Sentence Cube Game</td>\n",
+       "      <td>456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cephalopod</td>\n",
+       "      <td>280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Candy</td>\n",
+       "      <td>249</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Game Title Sum of rental amount\n",
+       "0  Dragon Ball Z TCG (2014 edition)                  633\n",
+       "1                      Yokai Septet                  543\n",
+       "2       Scrabble Sentence Cube Game                  456\n",
+       "3                        Cephalopod                  280\n",
+       "4                             Candy                  249"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Top5 zarabiających gier na sprzedaży\"\n",
+    "df = pd.DataFrame(top5_selers_AND_rental(cs)[1],columns=[\"Game Title\", \"Sum of rental amount\"])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_gry</th>\n",
+       "      <th>Tytuł</th>\n",
+       "      <th>czas trwania turnieju[min]</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Colonial Diplomacy</td>\n",
+       "      <td>10447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Colonial Diplomacy</td>\n",
+       "      <td>10447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Colonial Diplomacy</td>\n",
+       "      <td>10446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Colonial Diplomacy</td>\n",
+       "      <td>10445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Colonial Diplomacy</td>\n",
+       "      <td>10444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Colonial Diplomacy</td>\n",
+       "      <td>10442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Colonial Diplomacy</td>\n",
+       "      <td>10441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Colonial Diplomacy</td>\n",
+       "      <td>10440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Colonial Diplomacy</td>\n",
+       "      <td>10436</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Colonial Diplomacy</td>\n",
+       "      <td>10435</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id_gry               Tytuł  czas trwania turnieju[min]\n",
+       "0       5  Colonial Diplomacy                       10447\n",
+       "1       5  Colonial Diplomacy                       10447\n",
+       "2       5  Colonial Diplomacy                       10446\n",
+       "3       5  Colonial Diplomacy                       10445\n",
+       "4       5  Colonial Diplomacy                       10444\n",
+       "5       5  Colonial Diplomacy                       10442\n",
+       "6       5  Colonial Diplomacy                       10441\n",
+       "7       5  Colonial Diplomacy                       10440\n",
+       "8       5  Colonial Diplomacy                       10436\n",
+       "9       5  Colonial Diplomacy                       10435"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"Najdłuższe turnieje\"\n",
+    "df=pd.DataFrame(longest_tournament(cs),columns=[\"id_gry\",\"Tytuł\",\"czas trwania turnieju[min]\"])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[5, 5, 5]]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=[]\n",
+    "x.append([5]*3)\n",
+    "x"
    ]
   }
  ],
