--- a/Analiza.ipynb
+++ b/Analiza.ipynb
@@ -1255,11 +1255,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "P-value mniejsze od 0.05 oznacza, ze odrzucamy hipotezę zerową."
+   ]
   }
  ],
  "metadata": {
